--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -57,6 +57,13 @@ http {
         listen 80;
         server_name lamatzeresto.ch www.lamatzeresto.ch;
 
+         # Allow Let's Encrypt challenges
+       location /.well-known/acme-challenge/ {
+        root /var/www/html;
+        allow all;
+      }
+    
+
         # Proxy vers l'application Royella (Frontend)
         location / {
             proxy_pass http://royella_frontend;
