--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Reverse proxy Nginx for production
   nginx-proxy-prod:
@@ -8,9 +6,11 @@ services:
     restart: unless-stopped
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx-proxy.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./logs/nginx-prod:/var/log/nginx
+      - ./docker/ssl:/etc/nginx/ssl  # SSL certificates volume
     networks:
       - royella-prod-network
     depends_on:
@@ -25,6 +25,7 @@ services:
     restart: unless-stopped
     expose:
       - "80"
+      - "443"
     environment:
       - NODE_ENV=production
     healthcheck:
