--- a/nginx.conf
+++ b/nginx.conf
@@ -1,33 +1,58 @@
-server {
-    listen 80;
-    server_name lamatzeresto.ch www.lamatzeresto.ch;
-    # Redirect HTTP to HTTPS
-    return 301 https://$host$request_uri;
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 443 ssl http2;
-    server_name lamatzeresto.ch www.lamatzeresto.ch;
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    
+    # Logging
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    
+    access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log;
+    
+    # Basic settings
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
 
-    # SSL Certificate
-    ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    # HTTP to HTTPS redirect
+    server {
+        listen 80;
+        server_name lamatzeresto.ch www.lamatzeresto.ch;
+        # Redirect HTTP to HTTPS
+        return 301 https://$host$request_uri;
+    }
 
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
+    # HTTPS server
+    server {
+        listen 443 ssl http2;
+        server_name lamatzeresto.ch www.lamatzeresto.ch;
 
-    # Headers sécurité
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always;
-    add_header X-Frame-Options "DENY" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        # SSL Certificate
+        ssl_certificate /etc/nginx/ssl/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
-    gzip on;
-    gzip_types text/plain application/javascript text/css application/json;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
 
-    # Proxy vers l'application Royella (Frontend)
-    location / {
+        # Headers sécurité
+        add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always;
+        add_header X-Frame-Options "DENY" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+        gzip on;
+        gzip_types text/plain application/javascript text/css application/json;
+
+        # Proxy vers l'application Royella (Frontend)
+        location / {
             proxy_pass http://royella-app-prod;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -72,4 +97,5 @@ server {
             access_log off;
             log_not_found off;
         }
+    }
 }
