--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,11 @@ http {
     keepalive_timeout 65;
     types_hash_max_size 2048;
 
+      # Upstream pour l'application Royella (Frontend)
+    upstream royella_frontend {
+        server royella-app-prod:80;
+    }
+
     # HTTP to HTTPS redirect
     server {
         listen 80;
@@ -53,7 +58,7 @@ http {
 
         # Proxy vers l'application Royella (Frontend)
         location / {
-            proxy_pass http://royella-app-prod;
+            proxy_pass http://royella_frontend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -72,13 +77,13 @@ http {
 
         # Health check endpoint
         location /health {
-            proxy_pass http://royella-app-prod/health;
+            proxy_pass http://royella_frontend/health;
             access_log off;
         }
 
         # Cache static assets
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            proxy_pass http://royella-app-prod;
+            proxy_pass http://royella_frontend;
             expires 1y;
             add_header Cache-Control "public, immutable";
             access_log off;
