--- a/nginx.conf
+++ b/nginx.conf
@@ -40,8 +40,8 @@ http {
         server_name lamatzeresto.ch www.lamatzeresto.ch;
 
         # SSL Certificate
-        ssl_certificate /etc/nginx/ssl/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+        ssl_certificate /run/secrets/ssl_chain; # Secret
+        ssl_certificate_key /run/secrets/ssl_key; # Secret
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
