--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,9 +2,6 @@ services:
   # Reverse proxy Nginx for production
   nginx-proxy-prod:
     image: nginx:alpine
-    secrets:
-      - ssl_key
-      - ssl_chain
     container_name: nginx-proxy-prod
     restart: unless-stopped
     ports:
@@ -13,6 +10,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./logs/nginx-prod:/var/log/nginx
+      - ./docker/nginx/ssl:/etc/nginx/ssl  # SSL certificates volume
     networks:
       - royella-prod-network
     depends_on:
@@ -48,9 +46,3 @@ volumes:
 networks:
   royella-prod-network:
     driver: bridge
-
-secrets:
-  ssl_key:
-    file: ./docker/nginx/ssl/privkey.pem
-  ssl_chain:
-    file: ./docker/nginx/ssl/fullchain.pem
